welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:23: error: value gauche is not a member of Unit
gauche(); for(i<- 1 to 7){ recule();}gauche();avance();avance();droite();
                                     ^